--- a/.github/workflows/podcast_api_download_audio.yml
+++ b/.github/workflows/podcast_api_download_audio.yml
@@ -24,17 +24,46 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install google-auth
 
       - name: Google auth
         id: auth
         uses: google-github-actions/auth@v2
         with:
           credentials_json: "${{ secrets.GCP_SA_KEY_JSON }}"
-          token_format: "access_token"
+          create_credentials_file: true
+
+      - name: Mint access token
+        env:
+          CREDS_PATH: "${{ steps.auth.outputs.credentials_file_path }}"
+        run: |
+          TOKEN="$(python - <<'PY'
+          import os
+          from google.oauth2 import service_account
+          from google.auth.transport.requests import Request
+
+          path = os.environ.get('CREDS_PATH', '').strip()
+          if not path:
+            raise SystemExit('Missing CREDS_PATH from auth step')
+
+          creds = service_account.Credentials.from_service_account_file(
+            path,
+            scopes=["https://www.googleapis.com/auth/cloud-platform"],
+          )
+          creds.refresh(Request())
+          print((creds.token or '').strip())
+          PY
+          )"
+
+          if [ -z "$TOKEN" ]; then
+            echo "[gcp][FAIL] token empty" >&2
+            exit 1
+          fi
+          echo "GOOGLE_ACCESS_TOKEN=$TOKEN" >> "$GITHUB_ENV"
 
       - name: Download and upload audio
         env:
-          GOOGLE_ACCESS_TOKEN: "${{ steps.auth.outputs.access_token }}"
+          GOOGLE_ACCESS_TOKEN: "${{ env.GOOGLE_ACCESS_TOKEN }}"
           # Used by GitHub Releases uploader in scripts/podcast_api/github_release.py
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         run: |
